# BBMovie

./: .gitignore  .sonarcloud.properties  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: gemini-dispatch.yml  gemini-review.yml
backend/: .gitignore  ADVANCED_FEATURES_DEEP_DIVE.md  BASH-README.md  FEATURE_SUGGESTIONS.md  LAUNCHER-README.md  LIFE_CYCLE.md  commit-message-audio-processing.txt  commit-message-file-upload.txt  docker-compose.yml  features.md  launcher.bat  launcher.sh  make-executable.sh  pom.xml
backend/ai-assistant-service/: Dockerfile  docker-compose.yml  error.md  pom.xml
backend/ai-service/: .gitignore  Dockerfile  README.md  STRUCTURAL_CHANGES_COMMIT.txt  docker-compose.yml  jvm-args-track-native-memory.cmd  memory-leak-checker.sh  native-memory-check.sh  pom.xml  run-jooq-codegen.sh  run.bat  run.sh  setup-jooq-prop-env.sh  template-jooq-codegen.properties
backend/api-gateway/: pom.xml
backend/auth/: .gitignore  TODO.md  pom.xml
backend/auth-service/: pom.xml  run.bat
backend/authentication/: pom.xml
backend/bbmovie-common/: pom.xml
backend/bbmovie-core/: .gitignore  pom.xml
backend/bbmovie-payment/: pom.xml
backend/bbmovie-rag-recommendation/: pom.xml
backend/bbmovie-search/: pom.xml
backend/bbmovie-stream/: pom.xml
backend/bbmovie-upload-file/: pom.xml
backend/camunda-engine/: run.bat
backend/comment-service/: run.bat
backend/common/: pom.xml
backend/config-server/: pom.xml
backend/email/: pom.xml
backend/email-service/: README.md  pom.xml  run.bat  run.sh
backend/eureka-sever/: Dockerfile  pom.xml  run.bat  run.sh
backend/file-service/: .gitignore  LEGACY_BOUT_REMOVE.md  REFACTOR_TRANSCORDING.md  file_service_integration_commit_message.txt  legacy.md  pom.xml  refractor-plan.md  run.bat  run.sh
backend/gateway/: gateway-review-and-suggestions.md  pom.xml  run.bat
backend/homepage-recommendations/: pom.xml
backend/media-content-platform/services/transcode-services/rust/: .gitignore  Cargo.toml  README.md
backend/media-content-platform/services/transcode-services/rust/crates/tc-ffprobe/: Cargo.toml
backend/media-content-platform/services/transcode-services/rust/crates/tc-ffprobe/src/: lib.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-ffprobe/tests/: parser_tests.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-lgs/: Cargo.toml
backend/media-content-platform/services/transcode-services/rust/crates/tc-lgs/src/: lib.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-lgs/tests/: ladder_tests.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-runtime/: Cargo.toml
backend/media-content-platform/services/transcode-services/rust/crates/tc-runtime/src/: config.rs  lib.rs  storage.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-ves/: Cargo.toml
backend/media-content-platform/services/transcode-services/rust/crates/tc-ves/src/: main.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-vis/: Cargo.toml
backend/media-content-platform/services/transcode-services/rust/crates/tc-vis/src/: lib.rs  main.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-vis/tests/: strategy_tests.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-vqs/: Cargo.toml
backend/media-content-platform/services/transcode-services/rust/crates/tc-vqs/src/: lib.rs  main.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-vqs/tests/: scoring_tests.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-vvs/: Cargo.toml
backend/media-content-platform/services/transcode-services/rust/crates/tc-vvs/src/: lib.rs  main.rs
backend/media-content-platform/services/transcode-services/rust/crates/tc-vvs/tests/: validation_tests.rs
backend/media-content-platform/services/transcode-services/rust/crates/transcode-contracts/: Cargo.toml
backend/media-content-platform/services/transcode-services/rust/crates/transcode-contracts/src/: dto.rs  lib.rs  temporal.rs
backend/media-content-platform/services/transcode-services/rust/examples/: validation-request.json
backend/media-service/: flow-context.md  note-sync-id.md  pom.xml  run.bat
backend/media-streaming-service/: README.md  money-money.txt  note.md  pom.xml  run.bat  view-count.md
backend/media-upload-service/: minio-bucket-layout.md  pom.xml  run.bat
backend/monitoring/: pom.xml
backend/movie-analytics-service/: pom.xml
backend/notification/: README.md  pom.xml
backend/notification-service/: pom.xml  run.bat
backend/payment/: pom.xml
backend/payment-service/: Dockerfile  README.md  docker-compose.yml  pom.xml  run.bat  run.sh
backend/personalization-recommendation/: pom.xml  run.bat
backend/promotion-service/: pom.xml  run.bat
backend/rating-service/: pom.xml  run.bat
backend/referral-service/: pom.xml  run.bat
backend/revenue-dashboard/: pom.xml  run.bat
backend/review/: .gitignore  README.md  micronaut-cli.yml  pom.xml
backend/rust-ai-context-refinery/: .gitignore  Cargo.toml  README.md  run.bat  run.sh
backend/rust-ai-context-refinery/models/: note.txt
backend/rust-ai-context-refinery/src/: lib.rs  main.rs  utils.rs
backend/rust-ai-context-refinery/src/api/: audio.rs  mod.rs  ocr.rs  pdf.rs  process.rs  text.rs  vision.rs
backend/rust-ai-context-refinery/src/dto/: batch_result.rs  mod.rs  request.rs  response.rs
backend/rust-ai-context-refinery/src/infra/: eureka.rs  mod.rs
backend/rust-ai-context-refinery/src/services/: mod.rs  nats.rs  ocr.rs  pdf.rs  redis.rs  text.rs  vision.rs  whisper.rs
backend/rust-transcode-worker/: Cargo.toml  run.bat
docs/: api-control.md  db-change.md  sharding.md
frontend/: .env.example  PERFORMANCE_IMPROVEMENTS.md  README-FILE-SERVICE.md  optimize-build.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend-vite/: .gitignore  package-lock.json  package.json  tailwind.config.js
(+3820 files in other folders)
