[package]
name = "ai-refinery"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
# 1. Web Framework (Spring Boot replacement)
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["limit", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

lopdf = "0.32"

# 3. OCR
rusty-tesseract = "1.1"

# 4. Whisper & Audio
whisper-rs = { version = "0.12", features = ["whisper-cpp-log"] }
anyhow = "1.0"
symphonia = { version = "0.5", features = ["all"] }
uuid = { version = "1.18.1", features = ["v4"] }

reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
hostname = "0.3"
local-ip-address = "0.5"

# Utils
num_cpus="1.17.0"
tempfile = "3"
scopeguard = "1.2"
once_cell = "1.19"
