[package]
name = "rust-transcode-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
# 1. Web Framework (Spring Boot replacement)
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["limit", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
