[workspace]
members = [
    "crates/transcode-contracts",
    "crates/tc-ffprobe",
    "crates/tc-lgs",
    "crates/tc-vis",
    "crates/tc-ves",
    "crates/tc-vvs",
    "crates/tc-vqs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
