[workspace]
members = [
    "crates/transcode-contracts",
    "crates/tc-ffprobe",
    "crates/tc-runtime",
    "crates/tc-lgs",
    "crates/tc-vis",
    "crates/tc-ves",
    "crates/tc-vvs",
    "crates/tc-vqs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "rustls-tls"] }
rust-s3 = { version = "0.35.1", default-features = false, features = ["with-tokio", "tokio-rustls-tls"] }
futures = "0.3.32"
futures-util = "0.3.32"
temporalio-client = "0.4.0"
temporalio-common = "0.4.0"
temporalio-macros = "0.4.0"
temporalio-sdk = "0.4.0"
temporalio-sdk-core = "0.4.0"
